[gd_scene load_steps=18 format=4 uid="uid://d2y53u23kyydu"]

[ext_resource type="Script" uid="uid://c1tcd1h0ewxfi" path="res://source/actors/building pieces/door_body.gd" id="1_8wx54"]
[ext_resource type="Script" uid="uid://c1sng1fhyl8jm" path="res://source/actors/building pieces/doors/door.gd" id="1_ho16k"]
[ext_resource type="Material" uid="uid://cnmhob8uonjij" path="res://source/assets/shaders/outline_shader_mat.tres" id="2_yryoy"]
[ext_resource type="Material" uid="uid://h56gdt7iq7gt" path="res://source/assets/materials/rusty_metal/rusty_metal.tres" id="3_jw1xq"]
[ext_resource type="Script" uid="uid://c6u4diya4vu8v" path="res://source/actors/interactables/interactable_collision_area.gd" id="4_0hmko"]
[ext_resource type="PackedScene" uid="uid://cxcrhst771t0j" path="res://source/assets/sounds/doors/door_open_player.tscn" id="4_ctpe7"]
[ext_resource type="AudioStream" uid="uid://bqwq67f2o0pet" path="res://source/assets/sounds/doors/metal_door_open.ogg" id="4_poyu0"]
[ext_resource type="PackedScene" uid="uid://ogd88gkrpbw5" path="res://source/assets/sounds/doors/door_full_open_player.tscn" id="6_j2fn5"]
[ext_resource type="AudioStream" uid="uid://dunv6btc4xhul" path="res://source/assets/sounds/doors/cell_open_attempt.ogg" id="6_k55t4"]
[ext_resource type="PackedScene" uid="uid://ba6ttdmamhif6" path="res://source/assets/sounds/doors/door_unlock_player.tscn" id="6_p3s48"]
[ext_resource type="AudioStream" uid="uid://ca2p8v8poa2f4" path="res://source/assets/sounds/doors/metal_door_close.ogg" id="7_fuylc"]
[ext_resource type="PackedScene" uid="uid://bojvd78tojudr" path="res://source/assets/sounds/doors/door_attempt_player.tscn" id="7_pinkt"]
[ext_resource type="PackedScene" uid="uid://dgtgawtdo332v" path="res://source/assets/sounds/doors/door_close_player.tscn" id="9_i8ljn"]

[sub_resource type="ArrayMesh" id="ArrayMesh_6h731"]
_surfaces = [{
"aabb": AABB(-1.00697, 0.1, -0.03, 2.01392, 3.29144, 0.12),
"format": 34359742465,
"index_count": 360,
"index_data": PackedByteArray("AAACAAEAAAADAAIAAwAEAAIAAwAFAAQABgAIAAcABgAJAAgACgAMAAsACgANAAwADgAQAA8ADgARABAAEgAPABMAEgAOAA8AFAATABUAFAASABMAEQAVABAAEQAUABUAEAATAA8AEAAVABMAFAAOABIAFAARAA4ACQANAAoACQAGAA0ABgAMAA0ABgAHAAwACAAKAAsACAAJAAoABwALAAwABwAIAAsAFgAYABcAFgAZABgAGgAcABsAGgAdABwAGQAdABoAGQAWAB0AFgAcAB0AFgAXABwAGAAaABsAGAAZABoAFwAbABwAFwAYABsABQAeAAQABQAfAB4AIAAiACEAIAAjACIAIwAkACIAIwAlACQAJQAmACQAJQAnACYAJwAhACYAJwAgACEAHwABAB4AHwAAAAEAHgACAAQAAQACAB4AIQAkACYAIgAkACEAAwAfAAUAAwAAAB8AJQAgACcAJQAjACAAKAAqACkAKAArACoALAApAC0ALAAoACkALgAtAC8ALgAsAC0AKwAvACoAKwAuAC8AKgAtACkAKgAvAC0ALgAoACwALgArACgAMAAyADEAMAAzADIANAAxADUANAAwADEANgA1ADcANgA0ADUAMwA3ADIAMwA2ADcAMgA1ADEAMgA3ADUANgAwADQANgAzADAAOAA6ADkAOAA7ADoAPAA5AD0APAA4ADkAPgA9AD8APgA8AD0AOwA/ADoAOwA+AD8AOgA9ADkAOgA/AD0APgA4ADwAPgA7ADgAQABCAEEAQABDAEIARABBAEUARABAAEEARgBFAEcARgBEAEUAQwBHAEIAQwBGAEcAQgBFAEEAQgBHAEUARgBAAEQARgBDAEAASABKAEkASABLAEoATABJAE0ATABIAEkATgBNAE8ATgBMAE0ASwBPAEoASwBOAE8ASgBNAEkASgBPAE0ATgBIAEwATgBLAEgA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("hX7APpNATECQwvU8hX7APs3MzD2QwvU8qqUGP83MzD2QwvU8qqUGP5NATECQwvU8qqUGP83MzD2QwvW8qqUGP5NATECQwvW85OOAP54XMECQwvU85OOAP54XMECQwvW8YWFbP54XMECQwvW8YWFbP54XMECQwvU8YWFbP83MzD2QwvU8YWFbP83MzD2QwvW85OOAP83MzD2QwvW85OOAP83MzD2QwvU8mpmZvWANWUCQwvW8mpmZvc3MzD2QwvW8mpmZvc3MzD2QwvU8mpmZvWANWUCQwvU8mpmZPWANWUCQwvW8mpmZPc3MzD2QwvW8mpmZPWANWUCQwvU8mpmZPc3MzD2QwvU8vH7AvpNATECQwvU8vH7AvpNATECQwvW8xaUGv5NATECQwvW8xaUGv5NATECQwvU8xaUGv83MzD2QwvU8xaUGv83MzD2QwvW8vH7Avs3MzD2QwvW8vH7Avs3MzD2QwvU8hX7APs3MzD2OwvW8hX7APpNATECOwvW8ZeSAv54XMECOwvW8ZeSAv83MzD2OwvW8ZeSAv83MzD2QwvU8ZeSAv54XMECQwvU8Y2Jbv83MzD2QwvU8Y2Jbv54XMECQwvU8Y2Jbv83MzD2QwvW8Y2Jbv54XMECQwvW8YOSAvxKc8T6OwvU8YOSAv0bPpD6OwvU8YOSAv0bPpD7sUbg9YOSAvxKc8T7sUbg92uOAPxKc8T6OwvU82uOAP0bPpD6OwvU82uOAPxKc8T7sUbg92uOAP0bPpD7sUbg9YOSAvziajz+OwvU8YOSAvwnOeD+OwvU8YOSAvwnOeD/sUbg9YOSAvziajz/sUbg92uOAPziajz+OwvU82uOAPwnOeD+OwvU82uOAPziajz/sUbg92uOAPwnOeD/sUbg9YOSAv2vN4j+OwvU8YOSAvziazz+OwvU8YOSAvziazz/sUbg9YOSAv2vN4j/sUbg92uOAP2vN4j+OwvU82uOAPziazz+OwvU82uOAP2vN4j/sUbg92uOAPziazz/sUbg9YOSAv08AG0COwvU8YOSAv7ZmEUCOwvU8YOSAv7ZmEUDsUbg9YOSAv08AG0DsUbg92uOAP08AG0COwvU82uOAP7ZmEUCOwvU82uOAP08AG0DsUbg92uOAP7ZmEUDsUbg9mKYGv+iZRECOwvU8mKYGv1AAO0COwvU8mKYGv1AAO0DsUbg9mKYGv+iZREDsUbg9jKUGP+iZRECOwvU8jKUGP1AAO0COwvU8jKUGP+iZREDsUbg9jKUGP1AAO0DsUbg9")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_klp1h"]
resource_name = "small_gate_Cylinder"
_surfaces = [{
"aabb": AABB(-1.00697, 0.1, -0.03, 2.01392, 3.29144, 0.12),
"attribute_data": PackedByteArray("MYoiPgAAgD85iiI+QON4PWzP8z1A43g9W8/zPQAAgD9sHEc/QON4PWwcRz8AAIA/rCxLPwAAgD+sLEs/QON4PUIQBD8eZK8+giAIPx5krz6CIAg/zg6YPkIQBD/ODpg+QlEUP84OmD4CQRA/zg6YPgJBED8eZK8+QlEUPx5krz6l6zo/AACAP6jrOj8AAIAzZ9s2PwAAgDNl2zY/AACAPwiKIj0AAIA/TYoiPQAAgDO4n4o0AAAAAAAAAAAAAIA/qOs6PwAAgDOo6zo/AACAP+n7Pj8AAIA/6Ps+PwAAgDMqiqI9AACAPzWKoj0AAIAzYYoiPQAAAABNiiI9AACAPwKCID8eZK8+wnEcPx5krz7BcRw/brnGPgKCID9uucY+gmEYPx5krz7CcRw/HmSvPsJxHD/ODpg+gmEYP84OmD5w27Y+AACAP3Lbtj48HEc+MYqiPjwcRz4viqI+AACAP3BdVz88HEc+cF1XPwAAgD+wbVs/AACAP7BtWz88HEc+LE1TPwAAgD8uTVM/PBxHPu48Tz88HEc+7DxPPwAAgD/rOI4+PBxHPu04jj4AAIA/L4qiPgAAgD8tiqI+PBxHPoJhGD9uucY+wnEcP265xj7CcRw/HmSvPoJhGD8eZK8+wjAMP84OmD6CIAg/zg6YPoIgCD8eZK8+wjAMPx5krz68LEs+AACAP8EsSz5Q43g9PooiPkDjeD06iiI+AACAP6wsSz9g43g9rCxLPwAAgD/sPE8/AACAP+w8Tz9g43g9ahxHPwAAgD9tHEc/QON4PSwMQz9A43g9KgxDPwAAgD85z/M9AACAP1vP8z1Q43g9VIqiPVDjeD00iqI9AACAP0XPcz4AAIA/SM9zPkDjeD3ELEs+QON4PcEsSz4AAIA/bl1XPwAAgD9wXVc/PBxHPjBNUz88HEc+Lk1TPwAAgD+0LMs+AACAP7Ysyz5AHEc+ddu2PjwcRz5z27Y+AACAP7BtWz88HEc+sG1bPwAAgD/wfV8/AACAP/B9Xz88HEc+5DiOPgAAgD/sOI4+PBxHPlfPcz48HEc+SM9zPv//fz8oDEM/AACAPysMQz9A43g96vs+P0DjeD3o+z4/AACAP8IwDD8eZK8+wjAMP265xj4CQRA/brnGPgJBED8eZK8+wjAMP84OmD7CMAw/HmSvPgJBED8eZK8+AkEQP84OmD4CQRA/brnGPkJRFD9uucY+QlEUPx5krz4CQRA/HmSvPkJRFD9uucY+gmEYP265xj6CYRg/HmSvPkJRFD8eZK8+gmEYPx5krz6CYRg/zg6YPkJRFD/ODpg+QlEUPx5krz4zz/M+uy4uPzoQBD+7Li4/OxAEP5BbjD03z/M+kFuMPQGCID/ODpg+AYIgPx5krz5CkiQ/HmSvPkKSJD/ODpg+3DgOP7ouLj98YRg/ui4uP39hGD+IW4w93zgOP4hbjD34vm8/cLnGPreuaz9wucY+tq5rPwAAgD/2vm8/AACAPzKOYz8AAIA/cp5nPwAAgD9znmc/cLnGPjOOYz9wucY+giAIP265xj6CIAg/HmSvPkIQBD8eZK8+QhAEP265xj47EAQ/ui4uP9w4Dj+6Li4/3TgOP4hbjD08EAQ/iFuMPUIQBD9+uYA+QhAEP84OmD6CIAg/zg6YPoMgCD9+uYA+IIoiP7ouLj/Bsiw/ui4uP8OyLD+IW4w9I4oiP4hbjD06z3M/cLnGPvm+bz9wucY++L5vPwAAgD84z3M/AACAPzrPcz8AAIA/et93PwAAgD9833c/cLnGPjvPcz9wucY+wjAMP265xj7CMAw/HmSvPoIgCD8eZK8+giAIP265xj5+YRg/ui4uPx2KIj+6Li4/IYoiP4hbjD2BYRg/iFuMPcJxHD/ODpg+wnEcPx5krz4CgiA/HmSvPgKCID/ODpg+wrIsP7ouLj9i2zY/ui4uP2XbNj+IW4w9xbIsP4hbjD0xjmM/cLnGPvF9Xz9wucY+8H1fPwAAgD8wjmM/AACAP3SeZz8AAIA/tK5rPwAAgD+2rms/cLnGPnWeZz9wucY+wjAMP84OmD7CMAw/grmAPoIgCD+CuYA+giAIP84OmD70fd8+uy4uPzLP8z67Li4/Mc/zPpBbjD31fd8+iFuMPQJBED+CuYA+AkEQP84OmD5CURQ/zg6YPkJRFD+CuYA+tizLProuLj/0fd8+uy4uP/V93z6QW4w9uCzLPohbjD0AAIA/cLnGPr/vez9wucY+vu97PwAAgD/+/38/AACAP3zfdz8AAIA/vO97PwAAgD++73s/cLnGPn3fdz9wucY+QpIkP265xj5CkiQ/ImSvPgGCID8iZK8+AYIgP265xj4jiiI/AACAP8KyLD8AAIA/wrIsP7ouLj8jiiI/ui4uP8IwDD+CuYA+wjAMP84OmD4CQRA/zg6YPgJBED+CuYA+xbIsPwAAgD9k2zY/AACAP2TbNj+6Li4/xrIsP7ouLj8iCAI/kFuMPcTv+z6QW4w9wu/7Pm65xj4hCAI/brnGPkDP8z5uucY+we/7Pm65xj7C7/s+kFuMPULP8z6QW4w9"),
"format": 34359742487,
"index_count": 360,
"index_data": PackedByteArray("AAACAAEAAAADAAIABAAGAAUABAAHAAYACAAKAAkACAALAAoADAAOAA0ADAAPAA4AEAASABEAEAATABIAFAAWABUAFAAXABYAGAAaABkAGAAbABoAHAAeAB0AHAAfAB4AIAAiACEAIAAjACIAJAAmACUAJAAnACYAKAAqACkAKAArACoALAAuAC0ALAAvAC4AMAAyADEAMAAzADIANAA2ADUANAA3ADYAOAA6ADkAOAA7ADoAPAA+AD0APAA/AD4AQABCAEEAQABDAEIARABGAEUARABHAEYASABKAEkASABLAEoATABOAE0ATABPAE4AUABSAFEAUABTAFIAVABWAFUAVABXAFYAWABaAFkAWABbAFoAXABeAF0AXABfAF4AYABiAGEAYABjAGIAZABmAGUAZABnAGYAaABqAGkAawBqAGgAbABuAG0AbwBuAGwAcAByAHEAcABzAHIAdAB2AHUAdAB3AHYAeAB6AHkAeAB7AHoAfAB+AH0AfAB/AH4AgACCAIEAgACDAIIAhACGAIUAhACHAIYAiACKAIkAiACLAIoAjACOAI0AjACPAI4AkACSAJEAkACTAJIAlACWAJUAlACXAJYAmACaAJkAmACbAJoAnACeAJ0AnACfAJ4AoACiAKEAoACjAKIApACmAKUApACnAKYAqACqAKkAqACrAKoArACuAK0ArACvAK4AsACyALEAsACzALIAtAC2ALUAtAC3ALYAuAC6ALkAuAC7ALoAvAC+AL0AvAC/AL4AwADCAMEAwADDAMIAxADGAMUAxADHAMYAyADKAMkAyADLAMoAzADOAM0AzADPAM4A0ADSANEA0ADTANIA1ADWANUA1ADXANYA2ADaANkA2ADbANoA3ADeAN0A3ADfAN4A4ADiAOEA4ADjAOIA5ADmAOUA5ADnAOYA6ADqAOkA6ADrAOoA7ADuAO0A7ADvAO4A"),
"material": ExtResource("3_jw1xq"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 240,
"vertex_data": PackedByteArray("hX7APpNATECQwvU8hX7APs3MzD2QwvU8qqUGP83MzD2QwvU8qqUGP5NATECQwvU8qqUGP5NATECQwvU8qqUGP83MzD2QwvU8qqUGP83MzD2QwvW8qqUGP5NATECQwvW85OOAP54XMECQwvU85OOAP54XMECQwvW8YWFbP54XMECQwvW8YWFbP54XMECQwvU8YWFbP83MzD2QwvU8YWFbP83MzD2QwvW85OOAP83MzD2QwvW85OOAP83MzD2QwvU8mpmZvWANWUCQwvW8mpmZvc3MzD2QwvW8mpmZvc3MzD2QwvU8mpmZvWANWUCQwvU8mpmZPWANWUCQwvW8mpmZPc3MzD2QwvW8mpmZvc3MzD2QwvW8mpmZvWANWUCQwvW8mpmZPWANWUCQwvU8mpmZPc3MzD2QwvU8mpmZPc3MzD2QwvW8mpmZPWANWUCQwvW8mpmZvWANWUCQwvU8mpmZvc3MzD2QwvU8mpmZPc3MzD2QwvU8mpmZPWANWUCQwvU8mpmZvc3MzD2QwvU8mpmZvc3MzD2QwvW8mpmZPc3MzD2QwvW8mpmZPc3MzD2QwvU8mpmZPWANWUCQwvU8mpmZPWANWUCQwvW8mpmZvWANWUCQwvW8mpmZvWANWUCQwvU8YWFbP54XMECQwvU8YWFbP83MzD2QwvU85OOAP83MzD2QwvU85OOAP54XMECQwvU85OOAP54XMECQwvU85OOAP83MzD2QwvU85OOAP83MzD2QwvW85OOAP54XMECQwvW8YWFbP54XMECQwvW8YWFbP83MzD2QwvW8YWFbP83MzD2QwvU8YWFbP54XMECQwvU85OOAP54XMECQwvW85OOAP83MzD2QwvW8YWFbP83MzD2QwvW8YWFbP54XMECQwvW8vH7AvpNATECQwvU8vH7AvpNATECQwvW8xaUGv5NATECQwvW8xaUGv5NATECQwvU8xaUGv83MzD2QwvU8xaUGv83MzD2QwvW8vH7Avs3MzD2QwvW8vH7Avs3MzD2QwvU8xaUGv5NATECQwvU8xaUGv83MzD2QwvU8vH7Avs3MzD2QwvU8vH7AvpNATECQwvU8vH7AvpNATECQwvU8vH7Avs3MzD2QwvU8vH7Avs3MzD2QwvW8vH7AvpNATECQwvW8xaUGv5NATECQwvW8xaUGv83MzD2QwvW8xaUGv83MzD2QwvU8xaUGv5NATECQwvU8vH7AvpNATECQwvW8vH7Avs3MzD2QwvW8xaUGv83MzD2QwvW8xaUGv5NATECQwvW8qqUGP5NATECQwvW8qqUGP83MzD2QwvW8hX7APs3MzD2OwvW8hX7APpNATECOwvW8ZeSAv54XMECOwvW8ZeSAv83MzD2OwvW8ZeSAv83MzD2QwvU8ZeSAv54XMECQwvU8ZeSAv54XMECQwvU8ZeSAv83MzD2QwvU8Y2Jbv83MzD2QwvU8Y2Jbv54XMECQwvU8Y2Jbv54XMECQwvU8Y2Jbv83MzD2QwvU8Y2Jbv83MzD2QwvW8Y2Jbv54XMECQwvW8Y2Jbv54XMECQwvW8Y2Jbv83MzD2QwvW8ZeSAv83MzD2OwvW8ZeSAv54XMECOwvW8hX7APpNATECOwvW8hX7APs3MzD2OwvW8hX7APs3MzD2QwvU8hX7APpNATECQwvU8hX7APs3MzD2OwvW8qqUGP83MzD2QwvW8qqUGP83MzD2QwvU8hX7APs3MzD2QwvU8ZeSAv83MzD2OwvW8Y2Jbv83MzD2QwvW8Y2Jbv83MzD2QwvU8ZeSAv83MzD2QwvU8qqUGP5NATECQwvU8qqUGP5NATECQwvW8hX7APpNATECOwvW8hX7APpNATECQwvU8Y2Jbv54XMECQwvU8Y2Jbv54XMECQwvW8ZeSAv54XMECOwvW8ZeSAv54XMECQwvU8YOSAvxKc8T6OwvU8YOSAv0bPpD6OwvU8YOSAv0bPpD7sUbg9YOSAvxKc8T7sUbg92uOAPxKc8T6OwvU82uOAP0bPpD6OwvU8YOSAv0bPpD6OwvU8YOSAvxKc8T6OwvU82uOAPxKc8T7sUbg92uOAP0bPpD7sUbg92uOAP0bPpD6OwvU82uOAPxKc8T6OwvU8YOSAvxKc8T7sUbg9YOSAv0bPpD7sUbg92uOAP0bPpD7sUbg92uOAPxKc8T7sUbg9YOSAv0bPpD7sUbg9YOSAv0bPpD6OwvU82uOAP0bPpD6OwvU82uOAP0bPpD7sUbg92uOAPxKc8T7sUbg92uOAPxKc8T6OwvU8YOSAvxKc8T6OwvU8YOSAvxKc8T7sUbg9YOSAvziajz+OwvU8YOSAvwnOeD+OwvU8YOSAvwnOeD/sUbg9YOSAvziajz/sUbg92uOAPziajz+OwvU82uOAPwnOeD+OwvU8YOSAvwnOeD+OwvU8YOSAvziajz+OwvU82uOAPziajz/sUbg92uOAPwnOeD/sUbg92uOAPwnOeD+OwvU82uOAPziajz+OwvU8YOSAvziajz/sUbg9YOSAvwnOeD/sUbg92uOAPwnOeD/sUbg92uOAPziajz/sUbg9YOSAvwnOeD/sUbg9YOSAvwnOeD+OwvU82uOAPwnOeD+OwvU82uOAPwnOeD/sUbg92uOAPziajz/sUbg92uOAPziajz+OwvU8YOSAvziajz+OwvU8YOSAvziajz/sUbg9YOSAv2vN4j+OwvU8YOSAvziazz+OwvU8YOSAvziazz/sUbg9YOSAv2vN4j/sUbg92uOAP2vN4j+OwvU82uOAPziazz+OwvU8YOSAvziazz+OwvU8YOSAv2vN4j+OwvU82uOAP2vN4j/sUbg92uOAPziazz/sUbg92uOAPziazz+OwvU82uOAP2vN4j+OwvU8YOSAv2vN4j/sUbg9YOSAvziazz/sUbg92uOAPziazz/sUbg92uOAP2vN4j/sUbg9YOSAvziazz/sUbg9YOSAvziazz+OwvU82uOAPziazz+OwvU82uOAPziazz/sUbg92uOAP2vN4j/sUbg92uOAP2vN4j+OwvU8YOSAv2vN4j+OwvU8YOSAv2vN4j/sUbg9YOSAv08AG0COwvU8YOSAv7ZmEUCOwvU8YOSAv7ZmEUDsUbg9YOSAv08AG0DsUbg92uOAP08AG0COwvU82uOAP7ZmEUCOwvU8YOSAv7ZmEUCOwvU8YOSAv08AG0COwvU82uOAP08AG0DsUbg92uOAP7ZmEUDsUbg92uOAP7ZmEUCOwvU82uOAP08AG0COwvU8YOSAv08AG0DsUbg9YOSAv7ZmEUDsUbg92uOAP7ZmEUDsUbg92uOAP08AG0DsUbg9YOSAv7ZmEUDsUbg9YOSAv7ZmEUCOwvU82uOAP7ZmEUCOwvU82uOAP7ZmEUDsUbg92uOAP08AG0DsUbg92uOAP08AG0COwvU8YOSAv08AG0COwvU8YOSAv08AG0DsUbg9mKYGv+iZRECOwvU8mKYGv1AAO0COwvU8mKYGv1AAO0DsUbg9mKYGv+iZREDsUbg9jKUGP+iZRECOwvU8jKUGP1AAO0COwvU8mKYGv1AAO0COwvU8mKYGv+iZRECOwvU8jKUGP+iZREDsUbg9jKUGP1AAO0DsUbg9jKUGP1AAO0COwvU8jKUGP+iZRECOwvU8mKYGv+iZREDsUbg9mKYGv1AAO0DsUbg9jKUGP1AAO0DsUbg9jKUGP+iZREDsUbg9mKYGv1AAO0DsUbg9mKYGv1AAO0COwvU8jKUGP1AAO0COwvU8jKUGP1AAO0DsUbg9jKUGP+iZREDsUbg9jKUGP+iZRECOwvU8mKYGv+iZRECOwvU8mKYGv+iZREDsUbg9/3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/7////9//////////3//////////f/////////9///////9//////////3//////////f/////////9//////////38AAP9//7//fwAA/3//v/9/AAD/f/+//38AAP9//78AAP9//////wAA/3//////AAD/f/////8AAP9///////////////+///////7//7///////v//v/////////+/////f/////////9//////////3//////////f///////f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9/AAD/f/+//3//////////f/////////9//////////3//////////f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v////3//////////f/////////9//////////3//////AAD/f/////8AAP9//////wAA/3//////AAD/f///////////AAD/v/////8AAP+//////wAA/7//////AAD/v/9//////////3//////////f/////////9//////////38AAP9//7//fwAA/3//v/9/AAD/f/+//38AAP9//7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v////3//////////f/////////9//////////3//////AAD/f/////8AAP9//////wAA/3//////AAD/f///////////////v/////////+//////////7//////////vwAA//////+/AAD//////78AAP//////vwAA//////+/AAD/f/////8AAP9//////wAA/3//////AAD/f///////f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v////3//////////f/////////9//////////3//////AAD///7//78AAP//////vwAA//////+/AAD///7//78AAP9//////wAA/3//////AAD/f/////8AAP9///////9/AAD/f/+//38AAP9//7//fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9/AAD/f/+//38AAP9//7//f/////////9//////////3//////////f/////////9//////////3//////////f/////////9/////////AAD/f/////8AAP9//////wAA/3//////AAD/f////////////38AgP//////fwCA//////9/AID//////38AgP///3//////////f/////////9//////////3///////3//f/9/AID/f/9//38AgP9//3//fwCA/3//f/9/AID/fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9//////////3//////////f/////////9/////////AAD/f/////8AAP9//////wAA/3//////AAD/f////////////38AgP//////fwCA//////9/AID//////38AgP///3//////////f/////////9//////////3///////3//f/9/AID/f/9//38AgP9//3//fwCA/3//f/9/AID/fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9//////////3//////////f/////////9/////////AAD/f/////8AAP9//////wAA/3//////AAD/f////////////38AgP//////fwCA//////9/AID//////38AgP///3//////////f/////////9//////////3///////3//f/9/AID/f/9//38AgP9//3//fwCA/3//f/9/AID/fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9//////////3//////////f/////////9/////////AAD/f/////8AAP9//////wAA/3//////AAD/f////////////38AgP//////fwCA//////9/AID//////38AgP///3//////////f/////////9//////////3///////3//f/9/AID/f/9//38AgP9//3//fwCA/3//f/9/AID/fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9//////////3//////////f/////////9/////////AAD/f/////8AAP9//////wAA/3//////AAD/f////////////38AgP//////fwCA//////9/AID//////38AgP///3//////////f/////////9//////////3///////3//f/9/AID/f/9//38AgP9//3//fwCA/3//f/9/AID/fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//v/9//////////3//////////f/////////9/////////")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_6h731")

[sub_resource type="BoxShape3D" id="BoxShape3D_rrd7h"]
size = Vector3(0.15, 3.5, 2.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_eyo3m"]
size = Vector3(0.5, 3.5, 2.25)

[node name="door" type="Node3D"]
script = ExtResource("1_ho16k")

[node name="door_body" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, -1.67037e-22, -2.5411e-21, 1, 0, -1.67037e-22, 0, 1, -5.02354e-16, 0, 4.65661e-09)
collision_mask = 2
axis_lock_angular_x = true
axis_lock_angular_z = true
sleeping = true
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1_8wx54")

[node name="hinge_attach" type="StaticBody3D" parent="door_body"]
top_level = true

[node name="door" type="MeshInstance3D" parent="door_body"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -1.01)
layers = 8
material_overlay = ExtResource("2_yryoy")
mesh = SubResource("ArrayMesh_klp1h")
skeleton = NodePath("")

[node name="hinge" type="HingeJoint3D" parent="door_body"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 1.25, -0.00999999)
node_a = NodePath("../hinge_attach")
node_b = NodePath("..")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="collision_shape" type="CollisionShape3D" parent="door_body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, 1.75, -1.01)
shape = SubResource("BoxShape3D_rrd7h")

[node name="interact_area" type="Area3D" parent="door_body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -1.01)
collision_layer = 32768
collision_mask = 0
script = ExtResource("4_0hmko")

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_body/interact_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_eyo3m")

[node name="door_open_player" parent="door_body" instance=ExtResource("4_ctpe7")]
stream = ExtResource("4_poyu0")
pitch_scale = 0.75

[node name="door_open_finish_player" parent="door_body" instance=ExtResource("6_j2fn5")]

[node name="door_unlock_player" parent="door_body" instance=ExtResource("6_p3s48")]

[node name="door_attempt_player" parent="door_body" instance=ExtResource("7_pinkt")]
stream = ExtResource("6_k55t4")

[node name="door_close_player" parent="door_body" instance=ExtResource("9_i8ljn")]

[node name="gate_slam_player" type="AudioStreamPlayer3D" parent="door_body"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3.43491, -2.91813)
stream = ExtResource("7_fuylc")
volume_db = -15.0
pitch_scale = 0.75
bus = &"General"
attenuation_filter_db = -12.0

[node name="key_anim_player" type="AnimationPlayer" parent="door_body"]
root_node = NodePath("../key")

[node name="key" type="MeshInstance3D" parent="door_body"]
skeleton = NodePath("")
